--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,14 @@ jobs:
           tags: ${{ env.IMAGE_URL }}
           build-args: |
             DOPPLER_TOKEN=${{ secrets.DOPPLER_TOKEN }}
+            DOPPLER_PROJECT=${{ vars.DOPPLER_PROJECT }}
+            DOPPLER_ENVIRONMENT=${{ vars.DOPPLER_ENVIRONMENT }}
 
       # Deploy to CapRover
       - name: Deploy Image to CapRover
         uses: caprover/deploy-from-github@v1.1.2
         with:
           server: "${{ vars.CAPROVER_SERVER }}"
-          app: "${{ vars.APP_NAME }}"
+          app: "${{ vars.CAPROVER_APP_NAME }}"
           token: "${{ secrets.CAPROVER_APP_TOKEN }}"
           image: ${{ env.IMAGE_URL }}
