--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@logtail/next": "^0.1.4",
+    "@prisma/client": "^5.9.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +25,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "prisma": "^5.9.1",
     "typescript": "^5"
   }
 }
